[tool.poetry]
name = "saia"
version = "0.1.0"
description = ""
authors = ["Neil Van Alino <nvq.alino@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.51.2"
streamlit = "^1.39.0"
faster-whisper = "^1.0.3"
python-dotenv = "^1.0.1"
transformers = "^4.45.2"
torch = {version = "^2.5.0+cpu", source = "pytorch_cpu"}
gliner = "^0.2.13"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.12.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
